# stock-analysis

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  start.bat  start.sh  web-visualization-plan.md  产品评审报告.docx  功能验证报告_v1.0.md  开发人员补充功能清单.md
.github/workflows/: ci.yml
.trae/documents/: implementation_plan.md
backend/: database.py  log_handler.py  main.py  models.py  scheduler.py  schemas.py
backend/routers/: alerts.py  analyze.py  export.py  history.py  log.py  portfolio.py  settings.py  watchlist.py
backend/services/: analysis_service.py  auth_service.py  cache_service.py  config_service.py
config/: config.example.json
docs/: Windows启动指南.md  web-dev-plan.md  操作手册.docx  本地使用指南.md  测试报告.docx
frontend/: .prettierrc  eslint.config.js  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.test.ts  index.ts
frontend/src/components/: CandlestickChart.test.ts  CandlestickChart.vue  IndicatorCharts.test.ts  IndicatorCharts.vue  SystemLogs.test.ts  SystemLogs.vue
frontend/src/router/: index.ts
frontend/src/stores/: analysis.ts  watchlist.test.ts  watchlist.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
frontend/src/views/: Alerts.test.ts  Alerts.vue  Analysis.test.ts  Analysis.vue  (+4 more)
src/stock_analysis/: __init__.py  analyzer.py  cli.py  config.py  constants.py  dependencies.py  fetcher.py  indicators.py  output.py  scorer.py  support.py  开发人员更改要求文档_v1.0.md
tests/: conftest.py  test_analyzer.py  test_api_alerts.py  test_api_analyze.py  test_api_export.py  test_api_history.py  test_api_portfolio.py  test_api_watchlist.py  test_cli.py  test_config.py  test_fetcher.py  test_indicators.py  test_integration.py  test_output.py  test_scheduler.py  test_scorer.py  test_support.py
